--- a/index.html
+++ b/index.html
@@ -248,14 +248,30 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>这里放资源介绍</p>
+                <div class="col-lg-4 col-lg-offset-2" style="margin-left: 100px;margin-right: 100px;">
+                    <h3>资源介绍</h3>
+                    <p>本资源包含三个部分：<br/>1. 自制教材整本PDF<br/>2. 教材各章节习题及答案<br/>3. 教材内容部分出处和拓展学习资料<br/>同学们可根据需求自行点击右方链接下载或点击下方链接全部打包，祝学习愉快！</p>
                 </div>
-                <div class="col-lg-4">
-                    <p>这里放资源列表</p>
+                <div class="col-lg-4" style="margin-left: 100px;">
+                    <p>
+                        <ul class="list-inline"><h3>资源列表</h3>
+                            <li style="color: #fff;">
+                                <strong><a href="sources/InformationSystem.pdf" download="sources/InformationSystem.pdf" style="color: #fff;"><i class="fa fa-download"></i> 信息系统教材整本PDF</a>
+                                </strong>
+                            </li><br/><br/>
+                            <li style="color: #fff;">
+                                <strong><a href="sources/xiti.zip" download="sources/xiti.zip" style="color: #fff;"><i class="fa fa-download"></i> 习题答案汇总</a>
+                                </strong>
+                            </li><br/><br/>
+                            <li style="color: #fff;">
+                                <strong><a href="sources/tzzl.zip" download="sources/tzzl.zip" style="color: #fff;"><i class="fa fa-download"></i> 拓展资源汇总</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="sources/InformationSystem.pdf" class="btn btn-lg btn-outline" download="sources/InformationSystem.pdf">
+                    <a href="sources/all.zip" class="btn btn-lg btn-outline" download="sources/all.zip">
                         <i class="fa fa-download"></i> Download all!
                     </a>
                 </div>
@@ -403,10 +419,7 @@
                                     <strong><a href="sources/pdf (1章).pdf" target="_blank">信息系统概述</a>
                                     </strong>
                                 </li>
-                                <li>补充资源：
-                                    <strong><a href="http://sc.chinaz.com">Web Development</a>
-                                    </strong>
-                                </li>
+                                
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
