--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     .cards__item {
   width: 300px;
   height: 280px;
-  margin-right: 30px;
+  margin-right: 20px;
   margin-bottom: 25px;
   padding: 0;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
   border-radius: 10px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .cards__item * {
@@ -248,7 +248,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2" style="margin-left: 100px;margin-right: 100px;">
+                <div class="col-lg-4 col-lg-offset-2" style="margin-left: 100px; margin-right: 100px;">
                     <h3>资源介绍</h3>
                     <p>本资源包含三个部分：<br/>1. 自制教材整本PDF<br/>2. 教材各章节习题及答案<br/>3. 教材内容部分出处和拓展学习资料<br/>同学们可根据需求自行点击右方链接下载或点击下方链接全部打包，祝学习愉快！</p>
                 </div>
@@ -296,7 +296,7 @@
                             <img src="img/wenda/IMG_1693.PNG"/>
                             <h3 style="font-weight: bold;">项目团队成员</h3>
                             <div class="focus-content">
-                                <p style="font-weight: bold;">文本组：齐佩骥 王钰慧 张菊丽<br/>排版组：程染曦 刘思悦 吴璇<br/> <a href="#">Link to source</a>
+                                <p style="font-weight: bold;">文本组：齐佩骥 王钰慧 张菊丽<br/>排版组：程染曦 刘思悦 吴璇<br/>
                                 </p>
                             </div>
                         </div>
@@ -319,15 +319,15 @@
                             <img src="img/wenda/IMG_1695.PNG"/>
                             <h3 style="font-weight: bold;">教材文本内容来源</h3>
                             <div class="focus-content">
-                                <p style="font-weight: bold;">主要来源：人教版+粤教版+沪教版<br/>+浙教版+教科版+华东师大版《信息系统与社会》<br/> <a href="#">Link to source</a>
+                                <p style="font-weight: bold;">主要来源：人教版+粤教版+沪教版<br/>+浙教版+教科版+华东师大版《信息系统与社会》<br/>
                                 </p>
                             </div>
                         </div>
                         <div class="cards__item">
                             <img src="img/wenda/IMG_1696.PNG"/>
-                            <h3 style="font-weight: bold;">项目进度处理与分工</h3>
+                            <h3 style="font-weight: bold;">项目综合进展汇报</h3>
                             <div class="focus-content">
-                                <p style="font-weight: bold;">项目周期：14周；教材电子版->网站资源<br/>项目分工：集体讨论+在线协作<br/> <a href="#">Link to source</a>
+                                <p style="font-weight: bold;">项目周期：14周；教材电子版->网站资源<br/>项目分工：集体讨论+在线协作<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sources/汇报ppt.pdf" target="_blank">查看详细项目汇报PPT</a>
                                 </p>
                             </div>
                         </div>
@@ -653,7 +653,11 @@
                             
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="sources/第二章练习题答案 .pdf" target="_blank" download="sources/第二章练习题答案 .pdf"><i class="fa fa-download"></i>&nbsp;第二章习题答案</a>
+                                    <strong><a href="sources/第一章答案.pdf" target="_blank" download="sources/第一章答案.pdf"><i class="fa fa-download"></i>&nbsp;第一章习题答案</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="sources/第二章练习题答案 .pdf" target="_blank" download="sources/第二章练习题答案.pdf"><i class="fa fa-download"></i>&nbsp;第二章习题答案</a>
                                     </strong>
                                 </li>
                                 <li>
