--- a/index.html
+++ b/index.html
@@ -653,19 +653,19 @@
                             
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="sources/第一章答案.pdf" target="_blank" download="sources/第一章答案.pdf"><i class="fa fa-download"></i>&nbsp;第一章习题答案</a>
+                                    <strong><a href="sources/第一章答案.pdf" target="_blank"><i class="fa fa-download"></i>&nbsp;第一章习题答案</a>
                                     </strong>
                                 </li>
                                 <li>
-                                    <strong><a href="sources/第二章练习题答案 .pdf" target="_blank" download="sources/第二章练习题答案.pdf"><i class="fa fa-download"></i>&nbsp;第二章习题答案</a>
+                                    <strong><a href="sources/第二章练习题答案 .pdf" target="_blank"><i class="fa fa-download"></i>&nbsp;第二章习题答案</a>
                                     </strong>
                                 </li>
                                 <li>
-                                    <strong><a href="sources/第三章答案.pdf" target="_blank" download="sources/第三章答案.pdf"><i class="fa fa-download"></i>&nbsp;第三章习题答案</a>
+                                    <strong><a href="sources/第三章答案.pdf" target="_blank"><i class="fa fa-download"></i>&nbsp;第三章习题答案</a>
                                     </strong>
                                 </li>
                                 <li>
-                                    <strong><a href="sources/第四章答案.pdf" target="_blank" download="sources/第四章答案.pdf"><i class="fa fa-download"></i>&nbsp;第四章习题答案</a>
+                                    <strong><a href="sources/第四章答案.pdf" target="_blank"><i class="fa fa-download"></i>&nbsp;第四章习题答案</a>
                                     </strong>
                                 </li>
                             </ul>
