--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 这里做SEO优化 -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="description" content="该网站是基于华中师范大学信息技术学科2023届教学设计第一小组自制信息技术教材《信息系统》所做的资源导引性网站">
+    <meta name="Keywords" content="信息技术,教材,信息系统教材,华中师范大学">
+    <link rel="shortcut icon" href="IS_favicon.ico">
     <title>信息系统教材资源网站</title>
     <style>
         .cards {
